test/positive/feature_int.java

public class feature_int {
  public feature_int() {}
  protected int x;
}

