test/negative/feature_transient.java

  public class feature_transient {
    public feature_transient() {}
    public transient int x;
  }

